<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgMain"
    tools:context=".Welcome"
    android:paddingStart="35dp"
    android:paddingEnd="35dp"
    android:layout_gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">
        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:letterSpacing="0.05"
            android:text="@string/WelcomeTitle"
            android:textColor="@color/txtWhite"
            android:textSize="35sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_regular"
            android:letterSpacing="0.05"
            android:text="@string/WelcomeTxt"
            android:textColor="@color/txtWhite"
            android:textSize="18sp"
            android:layout_marginTop="50sp"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnYes"
            style="@style/Widget.Material3.Button.ElevatedButton.Icon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/btnYes"
            android:textColor="@color/mainBtnTxt"
            android:textSize="15sp"
            app:iconGravity="textStart"
            app:iconTint="@color/mainBtnTxt"
            android:layout_marginTop="40sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTxt" />

        <Button
            android:id="@+id/btnNo"
            style="@style/Widget.Material3.Button.ElevatedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnNo"
            android:textColor="@color/mainBtnTxt"
            android:textSize="15sp"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnYes"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>